# digital_life

./: .gitignore  AGENTS.md  Cargo.toml  README.md  STRUCTURE.md  check_axes.py  pyproject.toml  smoke_test_refactor.py
crates/digital-life-core/: Cargo.toml
crates/digital-life-py/: Cargo.toml
crates/spike/: Cargo.toml
docs/: README.md
docs/research/: result_manifest_bindings.json  (+1 more)
experiments/: final_analysis.md  final_graph_statistics.json  final_statistics.json
paper/: main.tex  peer_review_A_on_2026-02-15.md  peer_review_B_on_2026-02-15.md
scripts/: _project_root.py  analysis_utils.py  analyze_coupling.py  analyze_failure_pathways.py  analyze_invariance.py  analyze_lineage.py  analyze_midrun.py  analyze_pairwise.py  analyze_phenotype.py  analyze_results.py  analyze_trait_evolution.py  check.sh  check_manuscript_consistency.py  experiment_1000step.py  experiment_common.py  experiment_cyclic.py  experiment_cyclic_sweep.py  experiment_ecology_stress.py  experiment_evolution.py  experiment_final.py  experiment_final_graph.py  experiment_graded.py  experiment_graph_calibration.py  experiment_invariance.py  experiment_midrun_ablation.py  experiment_niche.py  experiment_pairwise.py  experiment_proxy.py  experiment_regimes.py  experiment_sham.py  experiment_spatial.py  experiment_trait_evolution.py  experiment_utils.py  generate_figures.py  param_sweep.py  param_sweep_thresholds.py  prepare_zenodo_metadata.py
tests_python/: test_analysis_smoke.py  test_analyze_results.py  test_generate_figures.py  test_post_merge_recommendations.py  test_smoke_refactor.py
(+27 files in other folders)
