[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "digital-life"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["scipy>=1.11.0"]

[tool.maturin]
manifest-path = "crates/digital-life-py/Cargo.toml"
python-source = "python"
module-name = "digital_life._core"
features = ["pyo3/extension-module"]
